--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "leaflet": "^1.3.4",
     "prop-types": "^15.6.2",
     "the-component-util": "^3.0.20",
-    "the-style": "^2.2.3"
+    "the-spin": "^3.1.10",
+    "the-style": "^2.2.3",
+    "the-window": "^7.0.1"
   },
   "devDependencies": {
     "@babel/runtime": "^7.1.5",
