--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
     "email": "okunishinishi@gmail.com",
     "url": "http://okunishitaka.com"
   },
+  "browser": {
+    ".": "shim",
+    "leaflet": false
+  },
   "bugs": {
     "url": "https://github.com/the-labo/the-map/issues"
   },
   "dependencies": {
     "classnames": "^2.2.6",
     "leaflet": "^1.3.4",
+    "leaflet-shim": "file:packages/leaflet-shim",
     "prop-types": "^15.6.2",
     "the-component-util": "^3.0.20",
     "the-spin": "^3.1.10",
