--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "leaflet": "^1.3.4",
     "leaflet-shim": "file:packages/leaflet-shim",
     "prop-types": "^15.6.2",
+    "the-component-constants": "^2.0.4",
     "the-component-util": "^3.0.20",
     "the-spin": "^3.1.10",
     "the-style": "^2.2.3",
