--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "url": "https://github.com/the-labo/the-map/issues"
   },
   "dependencies": {
+    "@okunishinishi/leaflet-shim": "^1.0.2",
     "classnames": "^2.2.6",
     "leaflet": "^1.3.4",
-    "leaflet-shim": "file:packages/leaflet-shim",
     "prop-types": "^15.6.2",
     "the-component-constants": "^2.0.4",
     "the-component-util": "^3.0.20",
-    "the-spin": "^3.1.10",
+    "the-spin": "^3.1.11",
     "the-style": "^2.2.3",
     "the-window": "^7.0.1"
   },
@@ -32,7 +32,7 @@
     "react-dom": "^16.6.1",
     "react-router-dom": "^4.3.1",
     "the-component-demo": "^4.0.17",
-    "the-script-build": "^4.0.11",
+    "the-script-build": "^4.0.13",
     "the-script-doc": "^1.0.2",
     "the-script-release": "^1.0.8",
     "the-script-share": "^1.0.5",
