--- a/.npmignore
+++ b/.npmignore
@@ -1,3 +1,5 @@
+# Created by .ignore support plugin (hsz.mobi)
+### Node template
 # Logs
 logs
 *.log
@@ -26,7 +28,11 @@ build/Release
 # https://docs.npmjs.com/misc/faq#should-i-check-my-node-modules-folder-into-git
 node_modules
 
+
+.sass-cache
+
 .idea
 tmp
-var
-public
+
+doc
+index.html
