--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@okunishinishi/leaflet-shim": "^1.0.2",
     "classnames": "^2.2.6",
+    "formatcoords": "^1.1.3",
     "leaflet": "^1.3.4",
     "prop-types": "^15.6.2",
     "the-component-constants": "^2.0.4",
@@ -26,7 +27,7 @@
     "the-window": "^7.0.1"
   },
   "devDependencies": {
-    "@babel/runtime": "^7.1.5",
+    "@babel/runtime": "*",
     "objnest": "^5.0.4",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
